# face_landmarks_tensorrtx

./: README.md
tf1/: shufflenet_v2.cpp
torch/: CMakeLists.txt  slim.cpp  slim_160_latest.wts  tmp.wts
